# KentHackathonAteam

./: .gitignore  CMakeLists.txt  dog_converter.py  img_converter.py  partitions.csv  sdkconfig.defaults  thumb_converter.py
.devcontainer/: Dockerfile  devcontainer.json
components/LoRaWAN/adapter/: systime.c  systime.h
components/LoRaWAN/common/: NvmDataMgmt.c
components/lora/: radio.c  sx126x_sensecap_board.c
examples/squareline_demo/main/ui/: ui_helpers.c  ui_helpers.h
main/: CMakeLists.txt  asteroid_death_jpg.c  asteroid_thumb.c  bridge_img.c  bridge_jpg_for_gemini.c  bridge_thumb.c  caveman_thumb.c  cavemantest_jpg.c  convert_to_c_array.py  dino3_thumb.c  dino_thumb.c  dinotest1_jpg.c  dinotest2_jpg.c  dinotest3_jpg.c  dogTalking_img.c  dog_idle_1_img.c  dog_idle_2_img.c  dog_scared_1_img.c  dog_scared_2_img.c  dog_talking_1_img.c  dog_talking_2_img.c  dogprototype3_img.c  dogprototype_img.c  gemini_client.c  gemini_client.h  idf_component.yml  magicrabit_jpg.c  main.c  mammoth_thumb.c  mammothtest_jpg.c  stairs_img.c  stairs_jpg_for_gemini.c  stairs_thumb.c  usb_camera.c  usb_camera.h
main/controller/: indicator_controller.c
main/model/: indicator_btn.c  indicator_sensor.c  indicator_wifi.c
main/ui/: ui.c  ui.h
main/ui/screens/: ui_screen_chartgpt_1.c  ui_screen_chartgpt_2.c  ui_screen_dalle_1.c  ui_screen_dalle_2.c  ui_screen_openai.c
main/view/: indicator_view.c
plans/: architecture.md
temp_main/: CMakeLists.txt  dogTalking_img.c  dogprototype3_img.c  dogprototype_img.c  main.c  usb_camera.c  wifi_scan.c  wifi_scan.h
